--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 //@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
-
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
