--- a/src/app/ui/components/footer/footer.component.scss
+++ b/src/app/ui/components/footer/footer.component.scss
@@ -1,45 +1,129 @@
 // footer.component.scss
 footer {
-    .social-icons {
+  /* .social-icons {
       a {
         transition: color 0.3s ease;
         &:hover {
-          color: #0d6efd !important;
+          color: #e53935 !important;
         }
       }
+    } */
+
+  /* From Uiverse.io by ubaidi10 */
+  .card {
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(238, 238, 238);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding: 25px 25px;
+    gap: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
+  }
+
+  /* for all social containers*/
+  .socialContainer {
+    width: 52px;
+    height: 52px;
+    background-color: rgb(44, 44, 44);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition-duration: 0.3s;
+  }
+  /* instagram*/
+  .containerOne:hover {
+    background-color: #d62976;
+    transition-duration: 0.3s;
+    transform: scale(1.5);
+    border-radius: 15px;
+  }
+  /* twitter*/
+  .containerTwo:hover {
+    background-color: #00acee;
+    transition-duration: 0.3s;
+    transform: scale(1.5);
+    border-radius: 15px;
+  }
+  /* linkdin*/
+  .containerThree:hover {
+    background-color: #0072b1;
+    transition-duration: 0.3s;
+    transform: scale(1.5);
+    border-radius: 15px;
+  }
+  /* Whatsapp*/
+  .containerFour:hover {
+    background-color: #25d366;
+    transition-duration: 0.3s;
+    transform: scale(1.5);
+    border-radius: 15px;
+  }
+
+  .socialContainer:active {
+    transform: scale(0.9);
+    transition-duration: 0.3s;
+  }
+
+  .socialSvg {
+    width: 17px;
+  }
+
+  .socialSvg path {
+    fill: rgb(255, 255, 255);
+  }
+
+  .socialContainer:hover .socialSvg {
+    animation: slide-in-top 0.3s both;
+  }
+
+  @keyframes slide-in-top {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
     }
-  
-    .list-unstyled {
-      li {
-        a {
-          transition: all 0.3s ease;
-          &:hover {
-            color: #0d6efd !important;
-            padding-left: 5px;
-          }
-        }
-      }
+
+    100% {
+      transform: translateY(0);
+      opacity: 1;
     }
-  
-    .contact-info {
-      p {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        margin-bottom: 0.5rem;
-      }
-    }
-  
-    .newsletter {
-      .input-group {
-        .form-control {
-          border-top-right-radius: 0;
-          border-bottom-right-radius: 0;
-        }
-        .btn {
-          border-top-left-radius: 0;
-          border-bottom-left-radius: 0;
+  }
+
+  .list-unstyled {
+    li {
+      a {
+        color: rgb(75, 85, 101) !important;
+        transition: all 0.3s ease;
+        &:hover {
+          color: #e53935 !important;
+          padding-left: 5px;
         }
       }
     }
   }
+
+  .contact-info {
+    p {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  .newsletter {
+    .input-group {
+      .form-control {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+      .btn {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+    }
+  }
+}
