--- a/src/app/ui/components/order/order.component.html
+++ b/src/app/ui/components/order/order.component.html
@@ -93,79 +93,24 @@
                     <div class="order-status fw-semibold" [ngClass]="getStatusColorClass(order.status)">
                       <!-- Status Icons -->
                       <ng-container [ngSwitch]="order.status">
-                        <i *ngSwitchCase="'Completed'" class="status-icon completed">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="green"
-                            class="bi bi-check-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                            <path
-                              d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05" />
-                          </svg>
+                        <i *ngSwitchCase="'Completed'" class="status-icon completed" style="color: green;">
                         </i>
-                        <i *ngSwitchCase="'Cancelled'" class="bi bi-x-circle">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#e53935"
-                            class="bi bi-x-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                            <path
-                              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-                          </svg>
+                        <i *ngSwitchCase="'Cancelled'" class="bi bi-x-circle" style="color: #e53935;">
                         </i>
                         <i *ngSwitchCase="'Pending'" class="bi bi-clock-history">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                            class="bi bi-clock-history" viewBox="0 0 16 16">
-                            <path
-                              d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z" />
-                            <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z" />
-                            <path
-                              d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5" />
-                          </svg>
                         </i>
-                        <i *ngSwitchCase="'Delivered'" class="bi bi-truck">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="green"
-                            class="bi bi-truck" viewBox="0 0 16 16">
-                            <path
-                              d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
-                          </svg>
+                        <i *ngSwitchCase="'Delivered'" class="bi bi-truck" style="color: green;">
                         </i>
-                        <i *ngSwitchCase="'Confirmed'" class="bi bi-check-all">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="green"
-                            class="bi bi-check-all" viewBox="0 0 16 16">
-                            <path
-                              d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
-                          </svg>
+                        <i *ngSwitchCase="'Confirmed'" class="bi bi-check-all" style="color: green;">                         
                         </i>
                         <i *ngSwitchCase="'Returned'" class="bi bi-arrow-return-left">
-                          <svg style="transform: scale(-1,1);" xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                            fill="#e53935" class="bi bi-truck" viewBox="0 0 16 16">
-                            <path
-                              d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
-                          </svg>
                         </i>
-                        <i *ngSwitchCase="'Shipped'" class="bi bi-truck">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="green"
-                            class="bi bi-truck" viewBox="0 0 16 16">
-                            <path
-                              d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
-                          </svg>
+                        <i *ngSwitchCase="'Shipped'" class="bi bi-truck" style="color: green;">
                         </i>
                         <i *ngSwitchCase="'Processing'" class="bi bi-gear">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                            class="bi bi-gear" viewBox="0 0 16 16">
-                            <path d="M8 0a8 8 0 0 1 5.3 13.7l-.7-.7A7 7 0 0 0 8 1V0z" />
-                            <path fill-rule="evenodd" d="M7.5 1.5a6 6 0 0 1 4.95 10.2l-.7-.7A5 5 0 0 0 7.5 2V1.5z" />
-                            <path fill-rule="evenodd" d="M7.5 2.5a5 5 0 0 1 3.95 8.2l-.7-.7A4 4 0 0 0 7.5 3V2.5z" />
-                            <path fill-rule="evenodd" d="M7.5 3.5a4 4 0 0 1 2.95 6.2l-.7-.7A3 3 0 0 0 7.5 4V3.5z" />
-                            <path fill-rule="evenodd" d="M7.5 4.5a3 3 0 0 1 1.95 4.2l-.7-.7A2 2 0 0 0 7.5 5V4.5z" />
-                            <path fill-rule="evenodd" d="M7.5 5.5a2 2 0 0 1 1.95 2.7l-.7-.7A1 1 0 0 0 7.5 6V5.5z" />
-                            <path fill-rule="evenodd" d="M7.5 6.5a1 1 0 0 1 1.95.3l-.7.7a.5.5 0 0 0-.7-.7V6.5z" />
-                          </svg>
                         </i>
-                        <i *ngSwitchCase="'Rejected'" class="bi bi-x-circle">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="red"
-                            class="bi bi-x-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                            <path
-                              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-                          </svg>
+                        <i *ngSwitchCase="'Rejected'" class="bi bi-x-circle" style="color: #e53935;">
+
                         </i>
                       </ng-container>
                       {{ order.status }}
