--- a/src/app/ui/components/order/order.component.scss
+++ b/src/app/ui/components/order/order.component.scss
@@ -167,8 +167,8 @@ app-user-sidebar {
           }
 
           .order-status {
-            font-size: 14px;
-            padding: 4px 8px;
+            font-size: 13px;
+            //padding: 4px 8px;
             border-radius: 4px;
             transition: background-color 0.2s;
 
