--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -58,6 +58,30 @@
   </app-product-grid>
 </section>
 
+<section class="products">
+  <app-product-grid 
+    *ngIf="mostViewedProducts"
+    [products]="mostViewedProducts.items"
+    [title]="'En Çok Ziyaret Edilen Ürünler'">
+  </app-product-grid>
+</section>
+
+<section class="products">
+  <app-product-grid 
+    *ngIf="bestSellingProducts"
+    [products]="bestSellingProducts.items"
+    [title]="'En Çok Satan Ürünler'">
+  </app-product-grid>
+</section>
+
+<section class="products">
+  <app-product-grid 
+    *ngIf="randomProducts"
+    [products]="randomProducts.items"
+    [title]="'Sizin İçin Seçtiklerimiz'">
+  </app-product-grid>
+</section>
+
 <section class="info-cards">
   <div class="container">
     <div class="card-grid">
