--- a/src/app/ui/components/login/login.component.html
+++ b/src/app/ui/components/login/login.component.html
@@ -35,7 +35,7 @@
 
       <button type="submit" class="btn-login">Sign In</button>
 
-      <div class="separator">
+      <!-- <div class="separator">
         <hr class="line">
         <span>or</span>
         <hr class="line">
@@ -43,7 +43,7 @@
 
       <button type="button" class="btn-social apple">
         <i class="fab fa-apple"></i> Continue with Apple
-      </button>
+      </button> -->
 
       <p class="terms">By signing in, you agree to our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a></p>
     </form>
