--- a/src/app/dialogs/cart-item-remove-dialog/cart-item-remove-dialog.component.html
+++ b/src/app/dialogs/cart-item-remove-dialog/cart-item-remove-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-container">
     <div class="dialog-header">
-      <h2>Ürünü Sepetten Kaldır</h2>
+      <h2>Remove the product from basket</h2>
       <button class="close-button" (click)="close()">
         <svg viewBox="0 0 24 24" width="24" height="24">
           <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
@@ -9,11 +9,11 @@
     </div>
 
     <div class="dialog-content">
-      <p>Bu ürünü sepetinizden kaldırmak istediğinize emin misiniz?</p>
+      <p>Are you sure you want to remove this product from your basket?</p>
     </div>
 
     <div class="dialog-actions">
-      <button class="cancel-button" (click)="close()">Vazgeç</button>
-      <button class="confirm-button" (click)="confirm()">Evet, Kaldır</button>
+      <button class="cancel-button" (click)="close()">Cancel</button>
+      <button class="confirm-button" (click)="confirm()">Yes, Remove</button>
     </div>
   </div>
