--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -550,8 +550,8 @@ $breakpoint-large: 1400px;
             height: 243px;
 
             img {
-              width: 100px;
-              height: 100px;
+              width: 150px;
+              height: 150px;
               object-fit: contain;
               margin-right: 15px;
             }
@@ -582,7 +582,7 @@ $breakpoint-large: 1400px;
               }
 
               p {
-                font-size: 12px;
+                font-size: 1rem;
                 margin: 0 0 5px 0;
               }
 
@@ -636,4 +636,36 @@ $breakpoint-large: 1400px;
       }
     }
   }
+  .categories-list,
+.subcategories,
+.recommended-products {
+  position: relative;
+  min-height: 200px;
+}
 
+.custom-spinner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.custom-spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
